Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-35057

Assertion failure in QQuickWindowPrivate::clearFocusInScope()

    XMLWordPrintable

Details

    • 0d1e1ddbf5732f1755d31020f82c540f2a69f756

    Description

      Hovering the menu items back and forth in the QtQuick Controls gallery example sometimes triggers an assertion failure in QQuickWindowPrivate::clearFocusInScope(). See the attached backtrace for more details.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            frederik Frederik Gladhorn
            jpnurmi J-P Nurmi
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes